#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([sbnc],[1.0],[sbnc-bugs@shroudirc.net])
AC_CONFIG_SRCDIR([sbnc.cpp])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h netdb.h netinet/in.h stdlib.h string.h sys/ioctl.h sys/socket.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

SSL_DEV=""
SSL_LIBS=""
ADNS_SUBDIR="no"
ADNS_LIBS=""

AC_ARG_ENABLE(ssl,
	[  --enable-ssl=yes          Enable support for ssl
  --disable-ssl         Disable support for ssl
  ]
)

AC_CHECK_LIB(dl, dlsym)
AC_CHECK_LIB(adns, adns_init, [], [
	ADNS_SUBDIR="yes"
	ADNS_LIBS="adns/libadns.a"
	])

if test $enable_ssl; then
	AC_CHECK_HEADERS([openssl/ssl.h])
	AC_CHECK_LIB(ssl, SSL_new, [ SSL_LIBS="-lssl -lcrypto"; SSL_DEF="-DUSESSL" ])
fi

AC_SUBST(SSL_LIBS)
AC_SUBST(SSL_DEF)
AC_SUBST(ADNS_SUBDIR)
AC_SUBST(ADNS_LIBS)

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_SELECT_ARGTYPES
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_CHECK_FUNCS([dup2 gethostbyaddr gethostbyname inet_ntoa memchr memset select socket strchr strdup strstr])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
