scriptsdir=$(exec_prefix)/scripts
scripts_DATA=account.tcl \
alltools.tcl \
awaymessage.tcl \
bind.tcl \
botnet.tcl \
channel.tcl \
contact.tcl \
fakemode.tcl \
highlight.tcl \
iface2.tcl \
ifacecmds.tcl \
lock.tcl \
misc.tcl \
namespace.tcl \
partyline.tcl \
pushmode.tcl \
qauth.tcl \
socket.tcl \
stubs.tcl \
tcl.tcl \
timers.tcl \
usys.tcl \
variables.tcl \
version.tcl \
vhost.tcl \
virtual.tcl

EXTRA_DIST=${scripts_DATA}
