scriptsdir=$(datadir)/sbnc/scripts
scripts_DATA=account.tcl \
alltools.tcl \
bind.tcl \
botnet.tcl \
channel.tcl \
contact.tcl \
defaultsettings.tcl \
iface2.tcl \
ifacecmds.tcl \
lock.tcl \
misc.tcl \
namespace.tcl \
partyline.tcl \
pushmode.tcl \
auth.tcl \
sbnc.tcl.dist \
socket.tcl \
stubs.tcl \
tcl.tcl \
timers.tcl \
usys.tcl \
variables.tcl \
vhost.tcl \
virtual.tcl \
telnet.tcl \
telnetclient.tcl \
iface.tcl \
itype.tcl

EXTRA_DIST=${scripts_DATA}
